--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  font-family: "Arial Black", sans-serif;
+  @apply size-full;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-teal-100 size-full text-black/30;
+}
+
+.emoji {
+  @apply grayscale-[0.8] hue-rotate-30 text-black;
+}
+
+.glossy {
+  background-image: linear-gradient(
+    45deg,
+    #000000de 25%,
+    #00000075 25%,
+    #000000de 35%,
+    #00000075 35%,
+    #000000de 50%,
+    #000000de 75%,
+    #00000075 75%,
+    #000000de 85%,
+    #00000075 85%,
+    #000000de 100%,
+    #00000075 100%
+  );
+  background-clip: text;
+  background-position: 0 0;
+  background-size: 50vmax 50vmax;
+  background-repeat: repeat;
+  animation: animateGlossy 45s infinite cubic-bezier(0.63, 0.16, 0.41, 0.87);
+}
+
+@keyframes animateGlossy {
+  0%,
+  100% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 100vw 0;
+  }
 }
