--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  @apply bg-rose-100 size-full text-black/5 font-semibold;
+  @apply bg-rose-100 size-full text-black/5 font-bold sm:font-semibold;
 }
 
 .glossy {
