--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,11 @@ html {
 }
 
 body {
-  @apply bg-rose-100 size-full text-black/5 font-bold sm:font-semibold;
+  @apply bg-rose-100 size-full text-rose-950/5 font-bold sm:font-semibold;
 }
 
 .glossy {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     45deg,
     #000000de 25%,
     #00000075 25%,
@@ -25,7 +25,22 @@ body {
     #00000075 85%,
     #000000de 100%,
     #00000075 100%
+  ); */
+  background-image: linear-gradient(
+    45deg,
+    rgb(76, 5, 25) 25%,
+    rgba(76, 5, 25, 0.4) 25%,
+    rgb(76, 5, 25) 35%,
+    rgba(76, 5, 25, 0.4) 35%,
+    rgb(76, 5, 25) 50%,
+    rgb(76, 5, 25) 75%,
+    rgba(76, 5, 25, 0.4) 75%,
+    rgb(76, 5, 25) 85%,
+    rgba(76, 5, 25, 0.4) 85%,
+    rgb(76, 5, 25) 100%,
+    rgba(76, 5, 25, 0.4) 100%
   );
+
   background-clip: text;
   background-position: 0 0;
   background-size: 50vmax 50vmax;
