--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,11 @@ html {
 }
 
 body {
-  @apply bg-rose-100 size-full text-rose-950/5 font-bold sm:font-semibold;
+  @apply bg-rose-100 size-full text-rose-950/5 font-bold;
+}
+
+* {
+  @apply text-balance;
 }
 
 .glossy {
