Add Souvenir Bold font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,7 @@
     --rotate-x: 8deg;
     --rotate-y: 2deg;
     --rotate-z: -1deg;
-    transform: rotateX(var(--rotate-x)) rotateY(var(--rotate-y))
-      rotateZ(var(--rotate-z)) translateZ(40px);
+    transform: rotateX(var(--rotate-x)) rotateY(var(--rotate-y)) rotateZ(var(--rotate-z)) translateZ(40px);
   }
 }
 
@@ -18,18 +17,23 @@ html {
 }
 
 body {
-  @apply bg-rose-100 w-full relative text-rose-950/5 font-bold;
+  @apply relative w-full bg-rose-100 font-medium text-rose-950/5;
 
-  background-image: radial-gradient(
-    circle at top center,
-    #ffffff99,
-    #fec3ca 60%
-  );
+  background-image: radial-gradient(circle at top center, #ffffff99, #fec3ca 60%);
 }
 
 * {
   overscroll-behavior: none;
   @apply text-balance;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-souvenir);
 }
 
 .glossy {
