--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  @apply font-montserrat relative w-full bg-rose-100 font-semibold text-rose-950/5;
+  @apply font-montserrat relative w-full bg-rose-100 font-semibold text-rose-950;
   background-image: radial-gradient(circle at top center, #ffffff99, #fec3ca 60%);
 }
 
@@ -50,7 +50,17 @@ body {
   transform: rotateX(var(--rotate-x)) rotateY(var(--rotate-y)) rotateZ(var(--rotate-z)) translateZ(40px);
 }
 
-.glossy {
+@keyframes animateGlossy {
+  0%,
+  100% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 100vw 0;
+  }
+}
+
+@utility glossy-base {
   will-change: background-position;
 
   background-image: linear-gradient(
@@ -63,32 +73,14 @@ body {
     rgb(76, 5, 25) 95%
   );
 
-  background-clip: text;
   background-position: 0 0;
   background-size: 50vmax 50vmax;
   background-repeat: repeat;
   animation: animateGlossy 45s infinite cubic-bezier(0.63, 0.16, 0.41, 0.87);
 }
 
-@media screen and (min-width: 640px) {
-  .glossy {
-    background-size: 100vmax 100vmax;
-
-    background-image: linear-gradient(
-      45deg,
-      rgb(76, 5, 25) 25%,
-      rgba(76, 5, 25, 0.4) 25%,
-      rgb(76, 5, 25) 35%,
-      rgba(76, 5, 25, 0.4) 35%,
-      rgb(76, 5, 25) 50%,
-      rgb(76, 5, 25) 75%,
-      rgba(76, 5, 25, 0.4) 75%,
-      rgb(76, 5, 25) 85%,
-      rgba(76, 5, 25, 0.4) 85%,
-      rgb(76, 5, 25) 100%,
-      rgba(76, 5, 25, 0.4) 100%
-    );
-  }
+.text-glossy {
+  @apply glossy-base bg-clip-text text-transparent;
 }
 
 @keyframes animateGlossy {
