--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,8 @@
     background: var(--color-rose-300);
   }
 
+  /* TODO Review/refactor classes below. Use @apply everywhere possible or just reg css */
+
   html {
     @apply w-full;
   }
@@ -101,16 +103,6 @@
   background-position: -25vmax 0;
   background-size: 50vmax 50vmax;
   background-repeat: repeat;
-}
-
-@keyframes animateGlossy {
-  0%,
-  100% {
-    background-position: 50vmax 0;
-  }
-  50% {
-    background-position: 0 0;
-  }
 }
 
 .grainy {
