--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,8 +37,8 @@
   }
 
   body {
-    @apply font-montserrat relative w-full overflow-x-hidden overflow-y-auto bg-rose-100 font-semibold text-rose-950;
-    background-image: radial-gradient(circle at top center, #ffffff99, #fec3ca 60%);
+    @apply font-montserrat relative w-full overflow-x-hidden overflow-y-auto bg-rose-300 font-semibold text-rose-950;
+    background-image: radial-gradient(circle at top center, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.35) 60%);
   }
 
   h1,
@@ -82,7 +82,7 @@
   will-change: background-position;
 
   --highlight: rgb(171, 130, 136);
-  --dark: rgba(77, 2, 24);
+  --dark: var(--color-rose-950);
 
   background-image: linear-gradient(
     45deg,
