--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,8 +101,8 @@
 
   background-clip: text;
   background-position: -25vmax 0;
-  background-size: 50vmax 50vmax;
-  background-repeat: repeat;
+  background-size: 50vmax 100px;
+  background-repeat: repeat-x;
 }
 
 .grainy {
