Revert glossy background size update to fix edge

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@
 
   background-clip: text;
   background-position: -25vmax 0;
-  background-size: 50vmax 100px;
+  background-size: 50vmax 50vmax;
   background-repeat: repeat-x;
 }
 
