--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,11 @@
   .font-souvenir {
     @apply tracking-[0.0125em];
   }
+
+  a,
+  button {
+    @apply cursor-pointer;
+  }
 }
 
 @utility glossy {
